--- a/fundooApp/templates/createLabel.html
+++ b/fundooApp/templates/createLabel.html
@@ -9,7 +9,7 @@
                 </md-button>
 
                 <md-icon class="btn-licon"><img src="images/baseline-clear-24px.svg"/ ></md-icon> <md-input-container md-no-float class="md-block"><input type="text" class="createLabe" ng-model="name" placeholder="Create new label" /></md-input-container>
-                  <md-icon  class="btn-licon"  ng-click="addLabel(label);"><img src="images/baseline-done-24px.svg"/></md-icon>
+                  <md-icon  class="btn-licon"  ng-click="addLabel();"><img src="images/baseline-done-24px.svg"/></md-icon>
                 </md-button>
             </div>
 
