--- a/fundooApp/css/styl.css
+++ b/fundooApp/css/styl.css
@@ -692,7 +692,7 @@ md-chips .md-chips
     background-color: rgba(0, 0, 0, 0);
 }
 
-.md-menu {
+/* .md-menu {
 
     line-height: normal;
     vertical-align: baseline;
@@ -709,7 +709,7 @@ md-chips .md-chips
     font-size: 13px;
     color: #000000;
     color: rgba(0, 0, 0, 0.87);
-}
+} */
 
 .trash-text
 {
