--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -1,4 +1,4 @@
-label,input{
+label{
   font-family: "comic sans",sans-serif;
 
   margin : 0 0 15px;
@@ -7,7 +7,26 @@ label,input{
   box-sizing: border-box;
   font-size: 14px;
 }
-input,textarea {width:620px;}
+
+  input{
+    font-family: "comic sans",sans-serif;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+  }
+
+  .hide-file {
+      /* position: absolute;
+      z-index: 1000;
+      opacity: 0;
+      cursor: pointer;
+      right: 0;
+      top: 0;
+      height: 50%;
+      font-size: 24px;
+      width: 50%; */
+  }
+/* textarea {width:620px;}
 
 .login{
 width:100%;
@@ -16,7 +35,7 @@ font-family:raleway;
 border: 2px solid #ccc;
 padding: 10px 40px 10px;
 word-wrap: break-word;
-}
+} */
 #close-btn{
   margin-left: -420px;
 width: 10px;
