--- a/fundooApp/templates/search.html
+++ b/fundooApp/templates/search.html
@@ -12,7 +12,7 @@
     <md-card ng-show="showWhenClicked" class="notecard">
 
         <div contenteditable class="intial-text"  data-placeholder="Title" ng-model="title" id="notecard1" ng-bind-html></div>
-      <div layout="row" layout-align="end end" >  <md-button class="md-icon-button"><img src="images/pin0.svg" >
+      <div layout="row" layout-align="end end" >  <md-button class="md-icon-button" ><img src="images/pin0.svg" >
           <md-tooltip>pin</md-tooltip></md-button>
     </div>
       <div contenteditable class="intial-text" data-placeholder="Take a note..." ng-model="description" id="notecard1"></div>
@@ -30,7 +30,7 @@
                           <div contenteditable class="contentsize"><strong ng-bind-html="note.title"> </strong>
                         </md-card-title-text>
                           </md-card-title>
-                          <span ng-click="updatePin(note)" id="pinondashboard">
+                          <span ng-click="updatePin(note)" style="margin-left: 133px;">
                             <img ng-if="note.pin === true" src="images/bluepin.svg">
                             <img ng-if="note.pin === false" src="images/pin0.svg">
                               <md-tooltip>Pin Note</md-tooltip>
