--- a/fundooApp/templates/label.html
+++ b/fundooApp/templates/label.html
@@ -1,45 +1,3 @@
-<md-dialog>
-  <md-dialog-content>
-    <div class="md-dialog-content">
-      <md-subheader class="label-header">Edit labels</md-subheader>
-      <div layout="row" layout-align="start center">
-        <md-button style="margin: 0 auto;padding: 0px;" class="md-icon-button md-icon-left" ng-click="changeIcon()" ng-show="close">
-          <md-icon><i class="material-icons">close</i></md-icon>
-        </md-button>
-        <md-button style="margin: 0 auto;padding: 0px;" class="md-icon-button md-icon-left" ng-click="changeIcon()" ng-show="add">
-          <md-icon><i class="material-icons">add</i></md-icon>
-        </md-button>
-        <input type="text" style="border:none;outline: none;" ng-model="label" placeholder="Create new label"
-        ng-click="changeIcon()" />
-        <md-button class="md-icon-button md-icon-right" ng-click="addLabel(label)" style="margin: 0 auto;padding: 0px;" ng-show="done">
-          <md-icon><i class="material-icons">done</i></md-icon>
-        </md-button>
-      </div>
-
-      <div layout="row" layout-align="start" ng-repeat="label in getlabels" ng-mouseover="enableEdit(label)" ng-mouseout="disableEdit(label)">
-        <md-button style="margin: 0px auto;padding: 0px" class="md-icon-button md-icon md-icon-left" ng-show="label.showDelete">
-          <md-icon ng-click="deleteLabel(label)"><i class="material-icons" >delete</i></md-icon>
-        </md-button>
-        <md-button style="margin: 0px auto;padding: 0px 0px" class="md-icon-button md-icon md-icon-left" ng-show="label.showLabel" >
-          <md-icon><i class="material-icons">label</i></md-icon>
-        </md-button>
-        <input  type="text" style="border:none;outline: none;" ng-model="label.name"  />
-        <md-button style="margin: 0px auto;padding: 0px;" class="md-icon-button md-icon md-icon-right" ng-show="showCreate">
-          <md-icon><i class="material-icons" ng-click="enableEdit(label);updateLabel(label);" >create</i></md-icon>
-        </md-button>
-        <!-- <md-button class="md-icon-button md-icon-right"  style="margin: 0 auto;padding: 0px;" ng-show="label.showDone">
-          <md-icon><i class="material-icons" >done</i></md-icon>
-        </md-button>
-      </div>
-      <div layout="row" layout-align="end end">
-        <md-button ng-click="hideDialogueBox()">
-          <strong>Done</strong>
-        </md-button>
-      </div>
-    </div>
-  </md-dialog-content>
-</md-dialog> -->
-
 
 
 
@@ -69,11 +27,11 @@
   </div>
 
 
-<md-subheader  id="header-btn" class="pinother"><strong>Fired</strong> </md-subheader>
+<md-subheader  id="header-btn" class="pinother" style="margin-left:270px;"><strong>Pinned</strong> </md-subheader>
 <div layout="row"  layout-align="center end" layout-wrap data-ng-init="getAllNote()" layout-align="center center" >
-  <md-card  style="background-color:{{note.color}};width:400px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false,reminderDate:''} |orderBy: '-notes':true |filter: searchText" >
-    <md-card-title >
-    <md-card-title-text ng-click="showAdvanced($event,note)">
+  <md-card  style="background-color:{{note.color}};width:400px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false,reminderDate:''} |orderBy: '-notes':true |filter: searchText">
+    <md-card-title ng-if="label.name===paramvalue" >
+    <md-card-title-text ng-click="showAdvanced($event,note)" >
       <div contenteditable>{{note.title}} </div>
     </md-card-title-text>
   </md-card-title>
@@ -115,8 +73,8 @@
      <md-icon><img src="images/baseline-color_lens-24px.svg"/></md-icon><md-tooltip>Change color</md-tooltip>
    </md-button>
    <md-menu-content width="2" ng-mouseleave="$mdMenu.close()">
-     <md-menu-item ng-repeat="x in customerData">
-       <div class="colorBox" ng-repeat="t1 in x" ng-style="{'background-color':t1.name};" ng-click="updateColor(note,t1.name)"></div>
+     <md-menu-item ng-repeat="colorvalue in customerData">
+       <div class="colorBox" ng-repeat="t1 in colorvalue" ng-style="{'background-color':t1.name};" ng-click="updateColor(note,t1.name)"></div>
      </md-menu-item>
    </md-menu-content>
    </md-menu>
@@ -147,9 +105,9 @@
 </div>
 </div>
 <div data-ng-init="getAllNote()" layout-wrap layout-align="center center">
-<md-subheader  id="header-btn" class="pinother"><strong>Upcoming</strong> </md-subheader>
+<md-subheader  id="header-btn" class="pinother"><strong>Others</strong> </md-subheader>
 <div layout="row"  layout-align="center end"  ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false,reminderDate:''} |orderBy: '-notes':true |filter: searchText"  >
-  <md-card ng-repeat="label in note.listOfLabels"  ng-if="label.name==paramvalue" style="background-color:{{note.color}};"  >
+  <md-card ng-repeat="label in note.listOfLabels" style="background-color:{{note.color}};"  >
     <md-card-title>
     <md-card-title-text  ng-click="showAdvanced($event,note)">
       <div contenteditable>{{note.title}} </div>
@@ -193,8 +151,8 @@
      <md-icon><img src="images/baseline-color_lens-24px.svg"/></md-icon><md-tooltip>Change color</md-tooltip>
    </md-button>
    <md-menu-content width="2" ng-mouseleave="$mdMenu.close()">
-     <md-menu-item ng-repeat="x in customerData">
-       <div class="colorBox" ng-repeat="t1 in x" ng-style="{'background-color':t1.name};" ng-click="updateColor(note,t1.name)"></div>
+     <md-menu-item ng-repeat="colorvalue in customerData">
+       <div class="colorBox" ng-repeat="t1 in colorvalue" ng-style="{'background-color':t1.name};" ng-click="updateColor(note,t1.name)"></div>
      </md-menu-item>
    </md-menu-content>
    </md-menu>
