--- a/fundooApp/css/styl.css
+++ b/fundooApp/css/styl.css
@@ -116,7 +116,8 @@
     border-radius: 1px;
     overflow-y: auto;
     padding: 0;
-    width: 300px;
+    width: 250px;
+
 }
 
 .label-btn
@@ -614,8 +615,8 @@ md-chips .md-chips
 .dashboard
 {
 
-    padding-top:5% ;
-    line-height: normal;
+    /* padding-top:5% ; */
+    /* line-height: normal;
     vertical-align:baseline;
     letter-spacing:normal;
     word-spacing:0px;
@@ -631,7 +632,7 @@ md-chips .md-chips
     color: #000000;
     color:rgba(0, 0, 0,0.87);
     background-color: #000000;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0); */
 }
 
 .input_text
